# JMI

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  README_zh_CN.md  jmi.cpp  jmi.h  main.cpp
.github/workflows/: build.yml  codeql-analysis.yml
test/: JMITest.cpp  JMITest.h  JMITest.java  signature.cpp
